# file-organiser

./: .gitignore  PRD.md  README.md  config.example.yaml  config.yaml  pyproject.toml
src/ordenar/: __init__.py  bootstrap.py  classifier.py  config.py  executor.py  hierarchy.py  logger.py  main.py  models.py  taxonomy.py
