[project]
name = "ordenar"
version = "0.1.0"
description = "Organizador inteligente de archivos con clasificación jerárquica top-down"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pyyaml>=6",
    "python-magic>=0.4",
    "pillow>=10",
    "pymupdf>=1.24",
    "ollama>=0.2",
]

[project.scripts]
ordenar = "ordenar.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ordenar"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]
